--- a/docs/snippets/react/button-story-disable-addon.js.mdx
+++ b/docs/snippets/react/button-story-disable-addon.js.mdx
@@ -6,7 +6,7 @@ import React from 'react';
 export default {
   title: 'Button',
   parameters: {
-    myAddon: { disable: true },
+    myAddon: { disabled: true },
   },
 };
 ```
