Revert b62f7c1; change API to disable composition
- `refs[key].disabled` -> `refs[key].disable`

--- a/docs/snippets/common/storybook-main-disable-refs.js.mdx
+++ b/docs/snippets/common/storybook-main-disable-refs.js.mdx
@@ -4,6 +4,6 @@
 module.exports = {
   // your Storybook configuration
   refs: {
-    'package-name': { disabled: true }
+    'package-name': { disable: true }
 }
 ```
