--- a/docs/snippets/common/storybook-preview-locales-globaltype.js.mdx
+++ b/docs/snippets/common/storybook-preview-locales-globaltype.js.mdx
@@ -13,7 +13,7 @@ export const globalTypes = {
         { value: 'fr', right: '🇫🇷', title: 'Français' },
         { value: 'es', right: '🇪🇸', title: 'Español' },
         { value: 'zh', right: '🇨🇳', title: '中文' },
-        { value: 'kr', right: '🇰🇷', title: '한국어' },
+        { value: 'ko', right: '🇰🇷', title: '한국어' },
       ],
     },
   },
