--- a/docs/snippets/common/my-component-story-use-globaltype.js.mdx
+++ b/docs/snippets/common/my-component-story-use-globaltype.js.mdx
@@ -5,7 +5,7 @@ const getCaptionForLocale = (locale) => {
   switch(locale) {
     case 'es': return 'Hola!';
     case 'fr': return 'Bonjour!';
-    case 'kr': return '안녕하세요!';
+    case 'ko': return '안녕하세요!';
     case 'zh': return '你好!';
     default:
       return 'Hello!',
