--- a/docs/snippets/react/button-test-utility.js.mdx
+++ b/docs/snippets/react/button-test-utility.js.mdx
@@ -2,14 +2,14 @@
 // Button.test.js
 
 import React from 'react';
-import { composeStory } from '@storybook/react';
+import { composeStories } from '@storybook/react';
 import { render, screen } from '@testing-library/react';
 import * as stories from './Button.stories';
 import * as globalConfig from '../.storybook/preview';
 import '@testing-library/jest-dom/extend-expect';
 
 // globalConfig is optional, only in case you have global decorators
-const Primary = composeStory(PrimaryStory, Meta, globalConfig);
+const { Primary } = composeStories(stories, globalConfig);
 
 it('renders the button in the primary state with custom text', () => {
   render(<Primary>Hello world</Primary>);
